.319
  - Add support + tests for PostgreSQL
  - Fixed ExtID support for non-InnoDB-backed classes + added tests
  - Cleaned up auto-detection, removed duplicate test code
  - Leaving dbPort undef (~) in .oprc will make OP use default port for
    specified dbi type
  - Add foreign key support for future versions of DBD::SQLite
  - Type::allowed($value) now returns true or throws an exception

2009-10-14: .318
  - Add support for cross-database foreign keys (just assert ExtID as usual)
  - Non-InnoDB classes won't try to use InnoDB for their linked tables (oops)
  - Run with hardcoded defaults if .oprc is not found
  - Automatically choose the "best" available backing store type
    on the local system, if no explicit __useYaml, __useDbi, or __dbiType
    values were given for a class
  - OP::Persistence - __selectBool(), __selectSingle() and __selectMulti()
    are now considered public and have been renamed to selectBool(),
    selectSingle() and selectMulti() (old names will work + warn for now)
  - More misc doc updates, tweaks, and fixes

2009-10-01: .317
  - Doc updates, more tweaks and fixes for RCS

2009-09-12: .316
  - Warn and disable RCS if binaries are not found (thx testers)

2009-09-10: .315
  - Most public methods with an "id" arg now accept either base64
    or string GUID forms
  - Gave RCS support some attention, added tests

2009-09-04: .314
  - Removed default of 0 for DateTime, will allow NULL instead
  - Split auxiliary datatypes off into their own distro
  - Split experimental packages off into their own distro
  - Reduced number of classes loaded by default
  - Added more tests
  - Fixed symbols exported via :yield tag
  - More misc cleanup

2009-09-02: .313
  - Made all exports from OP.pm optional, added export tags
  - Skip MySQL tests if database was not available

2009-08-27: .312
  - Try fixing test script to work properly under Perl 5.11
  - Added manifesto-esque postamble to main OP.pm document
  - Misc doc updates

2009-08-20: .311